examples/error/NoMain.c
int funzione(){
	string a;

	a = 5;

}
